--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Cancel Previous Runs
-        uses: pierreraffa/cancel-previous-runs-action
+        uses: pierreraffa/cancel-previous-runs-action@1.0
 
   test:
     runs-on: ubuntu-latest
