--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,12 +18,14 @@ jobs:
   cancel-previous-runs:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - name: Cancel Previous Runs
-        uses: PierreRAFFA/cancel-previous-runs-action@1.0
+        uses: ./.github/actions/cancel-previous-runs-action
+        # uses: PierreRAFFA/cancel-previous-runs-action@1.0
 
   test:
     runs-on: ubuntu-latest
     name: Test
     steps:
-      - uses: actions/checkout
+      - uses: actions/checkout@v3
       - run: sleep 180 && echo "Passed"
