--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,7 +20,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Cancel Previous Runs
-        uses: pierreraffa/cancel-previous-runs-action@1.1
+        uses: ./.github/actions/cancel-previous-runs-action
+        with:
+          workflow_names: Test,Deploy
+
+
 
   test:
     runs-on: ubuntu-latest
