--- a/.github/workflows/test-local.yaml
+++ b/.github/workflows/test-local.yaml
@@ -1,4 +1,4 @@
-name: Test
+name: Test-Local
 
 on:
   pull_request:
@@ -20,11 +20,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Cancel Previous Runs
-        uses: ./.github/actions/cancel-previous-runs-action
-        with:
-          workflow_names: Test,Deploy
-
-  test-local:
+        uses: pierreraffa/cancel-previous-runs-action@1.4
+        
+  test:
     runs-on: ubuntu-latest
     name: Test
     steps:
