--- a/.github/workflows/test-local.yaml
+++ b/.github/workflows/test-local.yaml
@@ -20,9 +20,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Cancel Previous Runs
-        uses: pierreraffa/cancel-previous-runs-action@1.4
-        
-  test:
+        uses: ./.github/actions/cancel-previous-runs-action
+        with:
+          workflow_names: Test,Test-Local
+
+  test-local:
     runs-on: ubuntu-latest
     name: Test
     steps:
