--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,11 +20,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Cancel Previous Runs
-        uses: ./.github/actions/cancel-previous-runs-action
-        with:
-          workflow_names: Test,Deploy
+        uses: pierreraffa/cancel-previous-runs-action@1.4
 
-  test-local:
+  test:
     runs-on: ubuntu-latest
     name: Test
     steps:
