--- a/action.yaml
+++ b/action.yaml
@@ -16,4 +16,4 @@ runs:
     env:
       GH_TOKEN: ${{ inputs.github_token }}
     run: |
-      ./.github/actions/cancel-previous-runs-action/cancel.sh
+      ./cancel.sh
