--- a/action.yaml
+++ b/action.yaml
@@ -15,5 +15,4 @@ runs:
     shell: bash
     env:
       GH_TOKEN: ${{ inputs.github_token }}
-    run: |
-      ./cancel.sh
+    run: bash ${GITHUB_WORKSPACE}/cancel.sh
