--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,7 +19,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Cancel Previous Runs
-        uses: pierreraffa/cancel-previous-runs-action@1.7
+        uses: pierreraffa/cancel-previous-runs-action@1.8
+        with:
+          workflow_names: '*'
 
   test:
     runs-on: ubuntu-latest
