--- a/action.yaml
+++ b/action.yaml
@@ -1,5 +1,5 @@
 name: 'Cancel Previous Runs Action'
-description: 'Cancels any previous with state `in_progress` or `queued` for the current workflow. Events (merge_group, pull_request, push)'
+description: 'Responsible to cancel previous runs for the current workflow or from a given list. Events (merge_group, pull_request, push)'
 branding:
   icon: 'alert-octagon'
   color: 'green'
